# textmate-scope-selector-peg

./: Cargo.toml  LICENSE.md  README.md
.github/workflows/: ci.yml
src/: lib.rs  matchers.rs
tests/: match.rs  prefix.rs
